lustre/ldlm/ldlm_lib.c
@@ -350,10 +350,12 @@ int client_obd_setup(struct obd_device *obddev, struct lustre_cfg *lcfg)
 
 	init_rwsem(&cli->cl_sem);
 	mutex_init(&cli->cl_mgc_mutex);
-        cli->cl_conn_count = 0;
-        memcpy(server_uuid.uuid, lustre_cfg_buf(lcfg, 2),
-               min_t(unsigned int, LUSTRE_CFG_BUFLEN(lcfg, 2),
-                     sizeof(server_uuid)));
+	cli->cl_seq = NULL;
+	init_rwsem(&cli->cl_seq_rwsem);
+	cli->cl_conn_count = 0;
+	memcpy(server_uuid.uuid, lustre_cfg_buf(lcfg, 2),
+	       min_t(unsigned int, LUSTRE_CFG_BUFLEN(lcfg, 2),
+		     sizeof(server_uuid)));
 
 	cli->cl_dirty_pages = 0;
 	cli->cl_avail_grant = 0;
